[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/enemyScripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/Spikes 2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 576.099

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 41.8868, 10 )

[node name="bossBullets" type="Area2D"]

editor/display_folded = true
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
maxHealth = 200
currentHealth = 200
damage = 25
directionH = 1
directionV = 1
speedH = 0
speedV = 0
speed = 0
acceleration = 0
vulnFreeze = true
vulnElectric = true
enemyType = 7

[node name="bulletSprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 0.077466 )
transform/scale = Vector2( 1, 0.984507 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="aggroArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="aggroShape" type="CollisionShape2D" parent="aggroArea"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="playerDamage" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="damagePlayer" type="CollisionShape2D" parent="playerDamage"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}


